--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -33,6 +33,7 @@
                     <failIfNoTests>true</failIfNoTests>
                 </configuration>
             </plugin>
+            <plugin>
                  <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.5</version>
@@ -70,6 +71,7 @@
                         </configuration>
                     </execution>
                  </executions>
+            </plugin>
         </plugins>
     </build>
 
